--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Djokovic không ký tên trong đơn kiện ATP",
+    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
+    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
+    "answers": [
+      {
+        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
+        "correct": true
+      },
+      {
+        "text": "Vì không đồng ý với nội dung kiện.",
+        "correct": false
+      },
+      {
+        "text": "Để thể hiện sự ủng hộ đối với ATP.",
+        "correct": false
+      },
+      {
+        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trồng quýt hồng Lai Vung trái vụ đón khách du lịch dịp lễ giỗ Tổ, lễ 30-4 và 1-5",
     "content": "Quýt hồng Lai Vung, đặc sản của Đồng Tháp, đang được trồng nghịch vụ để phục vụ khách du lịch trong dịp lễ Giỗ Tổ, lễ 30-4 và 1-5. Các nhà vườn như Ba Liên đã đầu tư để có trái quýt đẹp, thu hút du khách đến tham quan và chụp ảnh. Mặc dù sản lượng quýt nghịch vụ thấp hơn, nhưng giá bán lại cao hơn so với chính vụ, mang lại nguồn thu nhập ổn định cho người trồng.",
     "link": "https://tuoitre.vn/trong-quyt-hong-lai-vung-trai-vu-don-khach-du-lich-dip-le-gio-to-le-30-4-va-1-5-20250320183521463.htm",
@@ -1025,33 +1079,6 @@
     ]
   },
   {
-    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
-    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
-    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
-    "answers": [
-      {
-        "text": "Vì tội giết người",
-        "correct": true
-      },
-      {
-        "text": "Vì trộm cắp tài sản",
-        "correct": false
-      },
-      {
-        "text": "Vì lừa đảo",
-        "correct": false
-      },
-      {
-        "text": "Vì hành hung người khác",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tái tạo lưỡi cho chàng trai ung thư",
     "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
     "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
@@ -1074,6 +1101,33 @@
       },
       {
         "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
+    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
+    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
+    "answers": [
+      {
+        "text": "Vì tội giết người",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Vì hành hung người khác",
         "correct": false
       }
     ]
@@ -1829,37 +1883,6 @@
     ]
   },
   {
-    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
-    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
-    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
-    "answers": [
-      {
-        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc ho",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Ngủ nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguy cơ viêm khớp sau chấn thương",
     "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
     "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
@@ -1886,6 +1909,37 @@
       },
       {
         "text": "Chỉ vài ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
+    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
+    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
+    "answers": [
+      {
+        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc ho",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Ngủ nhiều hơn",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế ăn uống",
         "correct": false
       }
     ]
@@ -2119,33 +2173,6 @@
     ]
   },
   {
-    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
-    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
-    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
-    "answers": [
-      {
-        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
-        "correct": true
-      },
-      {
-        "text": "Tham gia giải Grand Slam đầu tiên",
-        "correct": false
-      },
-      {
-        "text": "Được biết đến từ năm 2022",
-        "correct": false
-      },
-      {
-        "text": "Giành huy chương vàng Olympic",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
     "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
     "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
@@ -2226,6 +2253,33 @@
       },
       {
         "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
+    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
+    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
+    "answers": [
+      {
+        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
+        "correct": true
+      },
+      {
+        "text": "Tham gia giải Grand Slam đầu tiên",
+        "correct": false
+      },
+      {
+        "text": "Được biết đến từ năm 2022",
+        "correct": false
+      },
+      {
+        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
@@ -3038,33 +3092,6 @@
     ]
   },
   {
-    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
-    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
-    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
-    "answers": [
-      {
-        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
-        "correct": true
-      },
-      {
-        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine sởi chỉ cần tiêm một lần.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ không bị sốt khi mắc bệnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Viêm tai giữa thủng nhĩ mà không biết",
     "content": "Chị Duyên, 35 tuổi, đã bị viêm tai giữa gây thủng màng nhĩ mà không biết và tự điều trị trong một năm. Khi triệu chứng đau tai và ù nặng hơn, chị mới đến bệnh viện khám và được chẩn đoán thủng màng nhĩ do viêm tai giữa. Bác sĩ đã tiến hành phẫu thuật vá màng nhĩ cho chị và khuyến cáo cần điều trị kịp thời để tránh các biến chứng nghiêm trọng như mất thính lực hay nhiễm trùng tai.",
     "link": "https://vnexpress.net/viem-tai-giua-thung-nhi-ma-khong-biet-4864027.html",
@@ -3145,6 +3172,33 @@
       },
       {
         "text": "Bệnh mạch vành",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
+    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
+    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
+    "answers": [
+      {
+        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
+        "correct": true
+      },
+      {
+        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine sởi chỉ cần tiêm một lần.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ không bị sốt khi mắc bệnh.",
         "correct": false
       }
     ]
@@ -4656,37 +4710,6 @@
       },
       {
         "text": "Giảm thuế cho giao dịch tiền số.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bệnh nấm phổi",
-    "content": "Bệnh nấm phổi là tình trạng nhiễm trùng do nấm xâm nhập vào phổi, phổ biến nhất là nấm aspergillus. Các triệu chứng bao gồm ho ra máu, khó thở, sốt kéo dài và đau ngực. Bệnh thường gặp ở những người có hệ miễn dịch yếu hoặc mắc các bệnh phổi mạn tính. Chẩn đoán bệnh qua các xét nghiệm cận lâm sàng, và điều trị sớm bằng thuốc kháng nấm có thể giúp người bệnh hồi phục.",
-    "link": "https://vnexpress.net/benh-nam-phoi-4863793.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh nấm phổi do loại nấm nào gây ra chủ yếu?",
-    "answers": [
-      {
-        "text": "Aspergillus",
-        "correct": true
-      },
-      {
-        "text": "Candida",
-        "correct": false
-      },
-      {
-        "text": "Cryptococcus",
-        "correct": false
-      },
-      {
-        "text": "Virus",
-        "correct": false
-      },
-      {
-        "text": "Bacteria",
         "correct": false
       }
     ]
