--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bệnh khí phế thũng",
+    "content": "Bệnh khí phế thũng là tình trạng phá hủy các túi khí trong phổi, dẫn đến khó thở và giảm khả năng thực hiện các hoạt động hàng ngày. Nguyên nhân chính của bệnh là do hút thuốc lá, ngoài ra còn có các yếu tố như ô nhiễm không khí và rối loạn di truyền. Bệnh có thể tiến triển nặng nếu không được phát hiện và điều trị kịp thời, gây ra nhiều biến chứng nghiêm trọng như suy hô hấp và ung thư phổi. Phương pháp điều trị chủ yếu là bỏ thuốc lá và sử dụng thuốc theo chỉ định của bác sĩ.",
+    "link": "https://vnexpress.net/benh-khi-phe-thung-4864288.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Khí phế thũng là bệnh liên quan đến tình trạng gì trong phổi?",
+    "answers": [
+      {
+        "text": "Phá hủy các túi khí trong phổi",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường chức năng phổi",
+        "correct": false
+      },
+      {
+        "text": "Làm giảm cân nặng",
+        "correct": false
+      },
+      {
+        "text": "Gây ho không có đờm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "CLB Nhật Bản trừ lương lãnh đạo vì thua đại diện Singapore",
     "content": "CLB Sanfrecce Hiroshima của Nhật Bản đã quyết định trừ lương ba lãnh đạo do sai sót trong việc đăng ký cầu thủ, dẫn đến việc đội bóng bị loại khỏi tứ kết AFC Champions League Two 2024-2025. Chủ tịch Masayoshi Kubo bị trừ 10% lương trong hai tháng, nhưng ông tự nguyện chịu phạt trong sáu tháng. Hai lãnh đạo bộ phận tuyển trạch cũng bị trừ lương do không kiểm tra kỹ tình trạng treo giò của cầu thủ Valere Germain.",
     "link": "https://vnexpress.net/clb-nhat-ban-tru-luong-lanh-dao-vi-thua-dai-dien-singapore-4864369.html",
@@ -349,28 +376,28 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
-    "cat": "the-thao",
-    "positivity": 6,
+    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
+    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
+    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
     "answers": [
       {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "text": "Chơi game và làm khảo sát để nhận quà",
         "correct": true
       },
       {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "text": "Chỉ có trưng bày sản phẩm",
         "correct": false
       },
       {
-        "text": "Vì Modric không hài lòng với trọng tài.",
+        "text": "Không có hoạt động gì đặc biệt",
         "correct": false
       },
       {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "text": "Chỉ có diễn thuyết về môi trường",
         "correct": false
       }
     ]
@@ -403,33 +430,6 @@
     ]
   },
   {
-    "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
-    "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
-    "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Gian hàng Việt Nam xanh tại Lễ hội Thanh niên TP.HCM có hoạt động gì hấp dẫn?",
-    "answers": [
-      {
-        "text": "Chơi game và làm khảo sát để nhận quà",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có trưng bày sản phẩm",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động gì đặc biệt",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có diễn thuyết về môi trường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Djokovic không ký tên trong đơn kiện ATP",
     "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
     "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
@@ -452,6 +452,33 @@
       },
       {
         "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -847,33 +874,6 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ và đồ chiên",
-        "correct": false
-      },
-      {
-        "text": "Đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chế biến sẵn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi giai đoạn nào cần hóa trị?",
     "content": "Ung thư phổi giai đoạn hai có thể được điều trị bằng hóa trị, tùy thuộc vào tình trạng sức khỏe tổng thể và đặc điểm khối u của bệnh nhân. Hóa trị có thể thực hiện trước hoặc sau phẫu thuật nhằm giảm kích thước khối u hoặc loại bỏ tế bào ung thư còn sót lại. Nếu bệnh ở giai đoạn tiến triển, hóa trị sẽ là phương pháp điều trị chính để giảm triệu chứng và kéo dài thời gian sống. Để có phác đồ điều trị chính xác, bệnh nhân cần được bác sĩ khám và xét nghiệm kỹ lưỡng.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-giai-doan-nao-can-hoa-tri-4864117.html",
@@ -896,6 +896,33 @@
       },
       {
         "text": "Không cần hóa trị nếu không có triệu chứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ và đồ chiên",
+        "correct": false
+      },
+      {
+        "text": "Đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
@@ -1415,33 +1442,6 @@
     ]
   },
   {
-    "title": "Tái tạo lưỡi cho chàng trai ung thư",
-    "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
-    "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào chàng trai ung thư lưỡi đã được điều trị?",
-    "answers": [
-      {
-        "text": "Bằng cách phẫu thuật cắt u và tái tạo lưỡi từ vạt da đùi.",
-        "correct": true
-      },
-      {
-        "text": "Bằng phương pháp hóa trị và xạ trị.",
-        "correct": false
-      },
-      {
-        "text": "Bằng cách sử dụng thuốc giảm đau và điều trị tự nhiên.",
-        "correct": false
-      },
-      {
-        "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
     "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
     "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
@@ -1464,6 +1464,33 @@
       },
       {
         "text": "Vì hành hung người khác",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tái tạo lưỡi cho chàng trai ung thư",
+    "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
+    "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào chàng trai ung thư lưỡi đã được điều trị?",
+    "answers": [
+      {
+        "text": "Bằng cách phẫu thuật cắt u và tái tạo lưỡi từ vạt da đùi.",
+        "correct": true
+      },
+      {
+        "text": "Bằng phương pháp hóa trị và xạ trị.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách sử dụng thuốc giảm đau và điều trị tự nhiên.",
+        "correct": false
+      },
+      {
+        "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
         "correct": false
       }
     ]
@@ -2219,37 +2246,6 @@
     ]
   },
   {
-    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
-    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
-    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
-    "answers": [
-      {
-        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc ho",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Ngủ nhiều hơn",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguy cơ viêm khớp sau chấn thương",
     "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
     "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
@@ -2276,6 +2272,37 @@
       },
       {
         "text": "Chỉ vài ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
+    "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
+    "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những cách nào để giảm cơn ho mà không cần thuốc?",
+    "answers": [
+      {
+        "text": "Sử dụng thảo dược và phương pháp tự nhiên",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc ho",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Ngủ nhiều hơn",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế ăn uống",
         "correct": false
       }
     ]
